# vscode-cpp-template

./: CMakeLists.txt  GenerateTemplate.ps1  README.md  keybinddings.json
Example/: CMakeLists.txt  main.cpp
Shared/: CMakeLists.txt
Shared/Private/: API.cpp
Shared/Public/: API.h  Definitions.Shared.h
cmake/: BuildExecutable.cmake  BuildQtExecutable.cmake  BuildShared.cmake  BuildStatic.cmake  FindQt.cmake  Install.cmake  QtInstall.cmake  Tools.cmake  config.cmake
templates/: CMakeLists.txt  main.cpp
