cmake_minimum_required(VERSION 3.16.0)

Project(ALL_TARGET)

option(USE_SOLUTION_FOLDERS  ON)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)

set(CMAKE_MODULE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
set(ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(BINARY_DIR ${ROOT_DIR}/Build/Debug/Binaries)
set(LIBRARY_DIR ${ROOT_DIR}/Build/Debug/libraries)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/Debug/${CMAKE_SYSTEM_PROCESSOR}/bin) 
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/Debug/${CMAKE_SYSTEM_PROCESSOR}/lib)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/Release/${CMAKE_SYSTEM_PROCESSOR}/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/Release/${CMAKE_SYSTEM_PROCESSOR}/lib)

add_subdirectory(Templates)
#add your module

